@@ -17,6 +17,7 @@
   Add wspeedt, wspeedr, wanglem, wanglet, wangler to  gps_fix_t
   Add "-p CONFIG" and "-p STATUS" options to ubxtool.
   Add python_shebang option to scons config.
+  gpsrinex has many new options.
 
 3.20: 2019-12-31
   Change README into an asciidoc file and publish HTML from it
